language/tests/error/TypeError02.hashem
bebin main() {
  age ("4") bood{ }
}  
