language/tests/error/TypeError02.output
Type error at TypeError02.hashem line 2 col 3: operation "age" not defined for String "4"
